CHANGELOG blackberry ant tools
------------------------------

2007/07/19 (josh)
- Bug fix: set the failOnError property to true for the java process that
  runs the rapc compiler

2007/07/02 (josh)
- Added nested type EntryPointType to JdpType for adding alternate entry
  points to CLDC applications
- Fifth release (0.5)

2007/06/07 (josh)
- Added optional property to RapcTask for changing the vm used to
  execute the rapc command
- Fourth release (0.4)

2007/05/18 (josh)
- Fixed library flag generation in JdpType class for sytem modules and
  applications that run on startup
- Third release (0.3)

2007/05/17 (josh)
- RapcTask: added info message with number of files being compiled, and verbose
  message when compilation is skipped
- Added "install" target in build script that copies the jar file into the
  ant lib directory
- Removed build version from jar file name and added Version attribute to jar
  manifest

2007/05/16 (josh)
- Fixed bug in RapcTask that would cause library type projects to
  be compiled as CLDC applications
- Second release (0.2)

2007/05/07 (josh)
- Changed SigtoolTask to display a warning message if the cod file size was
  the same before and after launching the SignatureTool
- Fixed bug that would create "file signed" indicator regardless if the file
  was signed or not

2007/04/30 (josh)
----------
- First release (0.1)