@@ -1,6 +1,11 @@
 CHANGELOG blackberry ant tools
 ------------------------------
 
+2007/08/10 (josh)
+- Added property to Sigtool for automatically requesting signature without
+  password prompt (requires JDE 4.3.x)
+- Sixth release (0.6)
+
 2007/07/19 (josh)
 - Bug fix: set the failOnError property to true for the java process that
   runs the rapc compiler
